# ChangeLog for dev-perl/PDF-API2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDF-API2/ChangeLog,v 1.12 2007/10/19 21:38:07 ian Exp $

*PDF-API2-0.65 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +PDF-API2-0.65.ebuild:
  Version bump

*PDF-API2-0.61 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +PDF-API2-0.61.ebuild:
  Version bump

  01 May 2007; Markus Rothe <corsair@gentoo.org> PDF-API2-0.59.002.ebuild:
  Added ~ppc64

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> PDF-API2-0.57.ebuild:
  Marking stable amd64

*PDF-API2-0.59.002 (07 Apr 2007)

  07 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +PDF-API2-0.59.002.ebuild:
  Version bump

*PDF-API2-0.57 (14 Jan 2007)

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +PDF-API2-0.57.ebuild:
  Version bump

*PDF-API2-0.56 (05 Jan 2007)

  05 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +PDF-API2-0.56.ebuild:
  Version bump

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org> PDF-API2-0.55.ebuild:
  amd64 stable

  24 Oct 2006; Joshua Jackson <tsunam@gentoo.org> PDF-API2-0.55.ebuild:
  ADDED ~x86; bug #152023

  21 Oct 2006; <nixnut@gentoo.org> PDF-API2-0.55.ebuild:
  Added ~ppc wrt bug 152023

*PDF-API2-0.55 (20 Oct 2006)

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +PDF-API2-0.55.ebuild:
  Bug 152023, new dep for www/otrs
