@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/PDF-API2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDF-API2/ChangeLog,v 1.12 2007/10/19 21:38:07 ian Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDF-API2/ChangeLog,v 1.13 2008/09/15 19:15:05 tove Exp $
+
+  15 Sep 2008; Torsten Veller <tove@gentoo.org> -PDF-API2-0.55.ebuild,
+  -PDF-API2-0.56.ebuild, -PDF-API2-0.59.002.ebuild, -PDF-API2-0.61.ebuild:
+  Cleanup
 
 *PDF-API2-0.65 (19 Oct 2007)
 
